remove permgen configuration from itest.gradle
(cherry picked from commit 552e7b5965f41307443b8bf137e498b449dc780f)